force-app/main/default/objects/Americord_Integration_Setting__mdt/Americord_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata contains values for use with integrations between SF and other systems.</description>
    <label>Americord Integration Setting</label>
    <pluralLabel>Ameircord Integration Settings</pluralLabel>
</CustomObject>