force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Patient_Extension_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Genome_Patient_Extension_Ethnicity__c</fullName>
    <label>Genome Patient Extension Ethnicity</label>
    <type>TextArea</type>
</CustomField>