force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Patient_Extension_Ethnicity_URL__c.field-meta.xml
<CustomField>
    <fullName>Genome_Patient_Extension_Ethnicity_URL__c</fullName>
    <label>Genome Patient Extension Ethnicity URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>