force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Patient_Extension_Race__c.field-meta.xml
<CustomField>
    <fullName>Genome_Patient_Extension_Race__c</fullName>
    <label>Genome Patient Extension Race</label>
    <type>TextArea</type>
</CustomField>