force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Patient_FullURL__c.field-meta.xml
<CustomField>
    <fullName>Genome_Patient_FullURL__c</fullName>
    <label>Genome Patient FullURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>