force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Practitioner_FullURL__c.field-meta.xml
<CustomField>
    <fullName>Genome_Practitioner_FullURL__c</fullName>
    <label>Genome Practitioner FullURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>