force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Client_Code_Nwbrn__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Client_Code_Nwbrn__c</fullName>
    <label>Genome Service Request Client Code Nwbrn</label>
    <length>50</length>
    <type>Text</type>
</CustomField>