force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Product_Code_MyG__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Product_Code_MyG__c</fullName>
    <description>Product code MyGenome.</description>
    <inlineHelpText>Product code MyGenome.</inlineHelpText>
    <label>Genome Service Request Product Code MyG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>