force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Product_Code_MyN__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Product_Code_MyN__c</fullName>
    <description>Product code for MyNewborn.</description>
    <inlineHelpText>Product code for MyNewborn.</inlineHelpText>
    <label>Genome Service Request Product Code MyN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>