force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Program_MyG_Prem__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Program_MyG_Prem__c</fullName>
    <description>This is the code for My Genome Premium</description>
    <inlineHelpText>This is the code for My Genome Premium</inlineHelpText>
    <label>Genome Service Request Program MyG Prem</label>
    <length>50</length>
    <type>Text</type>
</CustomField>