force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Program_MyG_Stnd__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Program_MyG_Stnd__c</fullName>
    <description>This is the program code for My Genome Standard.</description>
    <inlineHelpText>This is the program code for My Genome Standard.</inlineHelpText>
    <label>Genome Service Request Program MyG Stnd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>