force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Program_MyN_Geno__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Program_MyN_Geno__c</fullName>
    <description>This is the product code for the My Newborn Genome product.</description>
    <inlineHelpText>This is the product code for the My Newborn Genome product.</inlineHelpText>
    <label>Genome Service Request Program MyN Geno</label>
    <length>50</length>
    <type>Text</type>
</CustomField>