force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Program_MyN_Panel__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Program_MyN_Panel__c</fullName>
    <description>This is the program code for the My Newborn Panel product.</description>
    <inlineHelpText>This is the program code for the My Newborn Panel product.</inlineHelpText>
    <label>Genome Service Request Program MyN Panel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>