force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Service_Request_Program_System__c.field-meta.xml
<CustomField>
    <fullName>Genome_Service_Request_Program_System__c</fullName>
    <label>Genome Service Request Program System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>