force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genome_Specimen_Resource_Code_Code__c.field-meta.xml
<CustomField>
    <fullName>Genome_Specimen_Resource_Code_Code__c</fullName>
    <label>Genome Specimen Resource Code Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>