force-app/main/default/objects/Americord_Integration_Setting__mdt/fields/Genomics_Integration_Active__c.field-meta.xml
<CustomField>
    <fullName>Genomics_Integration_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will allow the genomics integration to be disabled.</description>
    <inlineHelpText>This flag will allow the genomics integration to be disabled.</inlineHelpText>
    <label>Genomics Integration Active</label>
    <type>Checkbox</type>
</CustomField>